[tool.poetry]
name = "ed-api"
version = "4.0.0"
description = "An API for Elite Dangerous"
authors = ["corenting <corenting@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/corenting/ed-api"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aenum = "^3.1.15"
aiofiles = "^23.2.1"
alembic = "^1.13.1"
beautifulsoup4 = "^4.12.3"
cachier = "^2.2.2"
environs = "^10.3.0"
fastapi = "^0.109.2"
firebase-admin = "^6.4.0"
gunicorn = "^21.2.0"
httpx = "^0.26.0"
loguru = "^0.7.2"
pydantic = "^2.6.1"
python-dateutil = "^2.8.2"
SQLAlchemy = "^2.0.25"
typer = "^0.9.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1 "}

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
ruff = "*"
types-python-dateutil = "*"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), flake8-print (T20), ruff rules (RUF),
# flake8-comprehensions (C4), flake8-datetimez (DTZ), isort (I), pep8-naming (N)
# pyupgrade (UP), flake8-async (ASYNC), flake8-bandit (S), perflint (PERF),
# tryceratops (TRY)
select = ["E", "F", "T20", "RUF", "C4", "DTZ", "I", "N", "UP", "ASYNC", "S", "PERF", "TRY"]
ignore = ["E501"]
per-file-ignores = {"app/database/__init__.py" = ["F401"]}

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
