[tool.poetry]
name = "ed-api"
version = "4.0.0"
description = "An API for Elite Dangerous"
authors = ["corenting <corenting@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/corenting/ed-api"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aenum = ">=3,<4"
aiofiles = ">=23,<24"
alembic = ">=1,<2"
beautifulsoup4 = ">=4,<5"
cachier = ">=3,<4"
environs = ">=11,<12"
fastapi = "<1"
firebase-admin = ">=6,<7"
gunicorn = ">=22,<23"
httpx = "<1"
loguru = "<1"
pydantic = ">=2,<3"
python-dateutil = ">=2,<3"
SQLAlchemy = ">=2,<3"
typer = "<1"
uvicorn = {extras = ["standard"], version = "<1"}

[tool.poetry.dev-dependencies]
mypy = "*"
ruff = "*"
types-python-dateutil = "*"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), flake8-print (T20), ruff rules (RUF),
# flake8-comprehensions (C4), flake8-datetimez (DTZ), isort (I), pep8-naming (N)
# pyupgrade (UP), flake8-async (ASYNC), flake8-bandit (S), perflint (PERF),
# tryceratops (TRY)
select = ["E", "F", "T20", "RUF", "C4", "DTZ", "I", "N", "UP", "ASYNC", "S", "PERF", "TRY"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/database/__init__.py" = ["F401"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
